@@ -19,19 +19,18 @@ import java.util.function.Consumer;
 @Singleton
 public class JobsService {
     @Inject
-    JobsApiService jobsApiService;
+    public JobsApiService jobsApiService;
     @Inject
-    TokenStorage tokenStorage;
+    public TokenStorage tokenStorage;
     @Inject
-    Subscriber subscriber;
+    public Subscriber subscriber;
     @Inject
-    EventListener eventListener;
+    public EventListener eventListener;
 
     Map<String, ObservableList<Job>> jobCollections = new HashMap<>();
     Map<String, ArrayList<Runnable>> jobCompletionFunctions = new HashMap<>();
     Map<String, ArrayList<Runnable>> jobDeletionFunctions = new HashMap<>();
     Map<String, Consumer<String[]>> jobInspectionFunctions = new HashMap<>();
-    Map<String, ArrayList<Runnable>> jobProgressFunctions = new HashMap<>();
     Map<String, ArrayList<Runnable>> jobTypeFunctions = new HashMap<>();
     Map<String, ArrayList<Consumer<Job>>> loadTypeFunctions = new HashMap<>();
     ArrayList<Runnable> loadCommonFunctions = new ArrayList<>();
@@ -44,7 +43,7 @@ public class JobsService {
 
     /**
      * Loads jobCollections started by the player's empire upon entering the game. <p>
-     * Call this method inside a method annoted with {@link org.fulib.fx.annotation.event.OnInit @OnInit}
+     * Call this method inside a method annotated with {@link org.fulib.fx.annotation.event.OnInit @OnInit}
      * within the {@link de.uniks.stp24.service.InGameService InGameService} controller before the
      * {@link #initializeJobsListener() initializeJobsListener} method.
      */
@@ -70,7 +69,7 @@ public class JobsService {
 
     /**
      * Creates a listener on job updates. <p>
-     * Call this method inside a method annoted with {@link org.fulib.fx.annotation.event.OnInit @OnInit}
+     * Call this method inside a method annotated with {@link org.fulib.fx.annotation.event.OnInit @OnInit}
      * within the {@link de.uniks.stp24.service.InGameService InGameService} controller after the
      * {@link #loadEmpireJobs() loadEmpireJobs} method.
      */
@@ -86,10 +85,10 @@ public class JobsService {
             }
             this.jobCommonUpdates.forEach(Runnable::run);
 
-        }, error -> System.out.print("JobsService: Failed to receive job updates. \n" + error.getMessage()));
+            }, error -> System.out.print("JobsService: Failed to receive job updates. \n" + error.getMessage()));
     }
 
-    private void addJobToGroups(@NotNull Job job) {
+    public void addJobToGroups(@NotNull Job job) {
         this.jobCollections.get(job.type()).add(job);
 
         if (!job.type().equals("technology")) {
@@ -104,7 +103,7 @@ public class JobsService {
         this.startCommonFunctions.forEach(Runnable::run);
     }
 
-    private void updateJobInGroups(@NotNull Job job) {
+    public void updateJobInGroups(@NotNull Job job) {
         this.jobCollections.get(job.type()).replaceAll(other -> other.equals(job) ? job : other);
         this.jobCollections.get("collection").replaceAll(other -> other.equals(job) ? job : other);
 
@@ -113,25 +112,24 @@ public class JobsService {
                 this.jobCollections.put(job.system(), FXCollections.observableArrayList(job));
             else this.jobCollections.get(job.system()).replaceAll(other -> other.equals(job) ? job : other);
 
-            if (this.jobCollections.get(job.system()).filtered(job1 -> job1.type().equals(job.type())).size() == 0)
+            if (this.jobCollections.get(job.system()).filtered(job1 -> job1.type().equals(job.type())).isEmpty())
                 this.jobCollections.get("collection").add(job);
         }
 
         if (this.jobTypeFunctions.containsKey(job.type()))
             this.jobTypeFunctions.get(job.type()).forEach(Runnable::run);
-
-        if (this.jobProgressFunctions.containsKey(job._id()))
-            this.jobProgressFunctions.get(job._id()).forEach(Runnable::run);
     }
 
-    private void deleteJobFromGroups(@NotNull Job job) {
+    public void deleteJobFromGroups(@NotNull Job job) {
         this.jobCollections.get(job.type()).removeIf(other -> other._id().equals(job._id()));
         this.jobCollections.get("collection").removeIf(other -> other._id().equals(job._id()));
 
         if (!job.type().equals("technology")) {
             this.jobCollections.get(job.system()).removeIf(other -> other._id().equals(job._id()));
-            if (this.jobCollections.get(job.system()).size() > 0)
-                this.jobCollections.get("collection").add(this.jobCollections.get(job.system()).get(0));
+
+            ObservableList<Job> systemJobs = this.jobCollections.get(job.system());
+            if (!systemJobs.isEmpty() && !this.jobCollections.get("collection").contains(systemJobs.getFirst()))
+                this.jobCollections.get("collection").add(systemJobs.getFirst());
         }
 
         if (this.jobCompletionFunctions.containsKey(job._id()))
@@ -145,11 +143,6 @@ public class JobsService {
         this.jobCompletionFunctions.remove(jobID);
     }
 
-    public Observable<Job> setJobPriority(String jobID, int priority) {
-        return this.jobsApiService.patchJobPriority(this.tokenStorage.getGameId(),
-                this.tokenStorage.getEmpireId(), jobID, priority);
-    }
-
     /**
      * A method to define further common functions that should be executed when a job of any type
      * is started. It is possible to add more than one function on the job start.
@@ -161,30 +154,6 @@ public class JobsService {
 
     public void onJobCommonUpdates(Runnable func) {
         this.jobCommonUpdates.add(func);
-    }
-
-    /**
-     * A method used to define the methods that should be executed when a certain job progresses.
-     * It is useful if you need to execute some methods that lay within other classes.
-     * It is possible to add more than one function on the job progress.
-     * @param jobID ID of the job on which update the function should be executed
-     * @param func the execution function
-     */
-    public void onJobProgress(String jobID, Runnable func) {
-        if (!this.jobProgressFunctions.containsKey(jobID))
-            this.jobProgressFunctions.put(jobID, new ArrayList<>());
-        this.jobProgressFunctions.get(jobID).add(func);
-    }
-
-    /**
-     * Use this method to check whether a certain job has some functions that run as it is progresses.
-     * @param jobID ID of the job that has to be checked
-     * @return true, if the job has a function set on its progress, false otherwise
-     */
-    public boolean hasOnProgress(String jobID) {
-        if (this.jobProgressFunctions.containsKey(jobID))
-            return this.jobProgressFunctions.get(jobID).size() > 0;
-        return false;
     }
 
     /**
@@ -206,10 +175,10 @@ public class JobsService {
      * @param jobType type of the job that has to be checked
      * @return true, if the job has a function set on its progress, false otherwise
      */
-    public boolean hasJobTypeProgress(String jobType) {
+    public boolean hasNoJobTypeProgress(String jobType) {
         if (this.jobTypeFunctions.containsKey(jobType))
-            return this.jobTypeFunctions.get(jobType).size() > 0;
-        return false;
+            return this.jobTypeFunctions.get(jobType).isEmpty();
+        return true;
     }
 
     /**
@@ -361,11 +330,11 @@ public class JobsService {
         this.jobInspectionFunctions.put(inspectorID, func);
     }
 
-    public Consumer<String[]> getJobInspector(String inspectorID) throws Exception {
+    public Consumer<String[]> getJobInspector(String inspectorID) {
         if (this.jobInspectionFunctions.containsKey(inspectorID))
             return this.jobInspectionFunctions.get(inspectorID);
-        else throw new Exception(String.format(
-                "Job Service: the inspection function is not found for a given inspector ID: %s!", inspectorID));
+        else System.out.printf("Job Service: the inspection function is not found for a given inspector ID: %s!\n", inspectorID);
+        return null;
     }
 
     /**
@@ -376,7 +345,6 @@ public class JobsService {
         this.jobCollections.clear();
         this.jobTypeFunctions.clear();
         this.jobCompletionFunctions.clear();
-        this.jobProgressFunctions.clear();
         this.jobDeletionFunctions.clear();
         this.loadTypeFunctions.clear();
         this.loadCommonFunctions.clear();
